[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprite/explosion-1.png" type="Texture" id=1]
[ext_resource path="res://Sprite/player.png" type="Texture" id=2]
[ext_resource path="res://Script/Enemy.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.5, 6.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 7 )

[sub_resource type="Animation" id=3]
resource_name = "Explode"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 240.718

[node name="Enemy" type="KinematicBody2D" groups=[
"enemy",
]]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.690196, 0.203922, 0.203922, 1 )
self_modulate = Color( 0.956863, 0.0431373, 0.0431373, 1 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Explosion" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8
frame = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Explode = SubResource( 3 )

[node name="DetectPlayer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer"]
visible = false
shape = SubResource( 4 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="DetectPlayer" to="." method="_on_DetectPlayer_body_entered"]
[connection signal="body_exited" from="DetectPlayer" to="." method="_on_DetectPlayer_body_exited"]
